Added all abilitys to the menu Made new ability items be automatically added to /test and the ability menu
Took 22 minutes